fix: update code block styles for improved readability

--- a/src/site/styles/user/custom-style.scss
+++ b/src/site/styles/user/custom-style.scss
@@ -44,11 +44,12 @@ h3 {
 
 /* --- 코드 블록 스타일 --- */
 pre {
-  border-radius: 3px; 
-  background-color: #f0f0f0; 
+  border-radius: 10px; 
+  background-color: #f0f0f0;
   white-space: pre-wrap; 
   word-break: break-word;
 }
+
 /* pre 태그 내부의 code 태그에 적용 (주요 코드 블록) */
 pre code {
   font-size: 0.9em !important; 
@@ -60,12 +61,8 @@ pre code {
 /* pre 태그 외부에 있는 code 태그에 적용 (인라인 코드) */
 :not(pre) > code {
   font-size: 0.9em !important; 
-  padding: 0.2em 0.4em; 
-  // border-radius: 3px; 
-  background-color: #f0f0f0; 
-  // color: #c7254e; 
-  // white-space: pre-wrap; 
-  // word-break: break-word;
+  font-family: "D2Coding", "Fira Code", monospace !important;
+  background-color: #f0f0f0;
 }
 
 pre {
